ZumZumFinancials_Dev1/src/objects/Approval_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoleId__c</fullName>
        <label>RoleId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SalesOrder</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PurchaseOrder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approval Limit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approval Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>